# exread

./: .gitignore  Makefile.am  configure.ac
exread/: bigint.hpp
src/: Makefile.am  bigint.cpp
tests/: Makefile.am  test_bigint.cpp
